<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvRounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/cardVieqRoundedCL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/iconEuro7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_euro_symbol_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/textRounded"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textRounded"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/lblDinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/CVRoundedDinner"
                app:layout_constraintEnd_toEndOf="@+id/textDinner"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textDinner"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/iconEuro6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableStart="@drawable/ic_euro_symbol_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/textPerDinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textPerDinner"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/lblPerDinner"
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/CVRoundedPerDinner"
                app:layout_constraintBottom_toTopOf="@+id/textPerDinner"
                app:layout_constraintEnd_toStartOf="@+id/iconEuro6"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textPerDinner"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.615" />

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="56dp"
                android:layout_marginBottom="8dp"
                android:text="@string/CardViewBottonReset"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.995"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textRounded"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/textDinner"
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:textAlignment="textEnd"
                android:inputType="number"
                app:layout_constraintBottom_toTopOf="@+id/lblRounded"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblDinner"
                app:layout_constraintVertical_bias="0.044" />

            <EditText
                android:id="@+id/textPerDinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:focusable="false"
                android:ems="10"
                android:textAlignment="textEnd"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@+id/textDinner"
                app:layout_constraintEnd_toStartOf="@+id/iconEuro6"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textDinner"
                app:layout_constraintTop_toTopOf="@+id/textDinner"
                tools:layout_editor_absoluteY="47dp" />

            <TextView
                android:id="@+id/lblRounded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/CVRoundedRounded"
                app:layout_constraintEnd_toEndOf="@+id/textRounded"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textRounded"
                app:layout_constraintTop_toBottomOf="@+id/textPerDinner" />

            <EditText
                android:id="@+id/textRounded"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:focusable="false"
                android:ems="10"
                android:textAlignment="textEnd"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/iconEuro7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblRounded" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>